Fix some problem

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -39,6 +39,7 @@
     
     <div class="hero" alt="hero">
         <picture>
+            <source type="image/jpeg" srcset="./images/heros/hero-image_4.jpg">
             <source media="(max-width: 600px)" srcset="./images/heros/hero-image_4-small.jpg">
             <img class="heroImg" src="./images/heros/hero-image_4-large.jpg" alt="hero">
         </picture>
