--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -157,7 +157,7 @@ picture{
 	position: absolute;
 	margin: 0 auto;
 	max-width: 800px;
-    top: 50%;
+    top: 320px;
     left: 50%;
     transform: translate(-50%, -50%);
 }
